--- a/popup.html
+++ b/popup.html
@@ -1,14 +1,84 @@
 <!DOCTYPE html>
-<html>
+<html style="width: 350px; background-color: #000000;">
     <head>
+
+        <style>
+            .gradient-text {
+                background-image:linear-gradient(-45deg,#525FE1,#FF90BB);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+            }
+
+            #clear-passwords-btn {
+                border: none;
+                background-color: white;
+                color: black;
+                cursor: pointer;
+                height: 40px;
+                padding-left: 15px;
+                padding-right: 15px;
+                border-radius: 0.5em;
+                box-shadow: 0px 4px 12px 0px rgba(255,255,255,0.71);
+
+                transition: box-shadow 0.3s;
+            }
+
+            #clear-passwords-btn:hover {
+                box-shadow: 0px 4px 20px 0px rgba(255,255,255,0.71);
+            }
+
+            #passwords-div {
+                display: flex;
+                flex-direction: column;
+            }
+
+            .passwords-item {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+
+                margin-bottom: 10px;
+            }
+            
+            .passwords-item a {
+                text-decoration: none;
+                color: white;
+                font-size: 16px;
+            }
+
+            .passwords-item button {
+                border: none;
+                background-color: white;
+                color: black;
+                cursor: pointer;
+                height: 30px;
+                padding-left: 15px;
+                padding-right: 15px;
+                border-radius: 0.5em;
+                box-shadow: 0px 4px 12px 0px rgba(255,255,255,0.71);
+
+                transition: box-shadow 0.3s;
+            }
+
+            .passwords-item button:hover {
+                box-shadow: 0px 4px 20px 0px rgba(255,255,255,0.71);
+            }
+        </style>
     </head>
     <body>
-        <h1>100% definitely secure password manager</h1>
-        <p>Cheeky link: <a href="https://youtube.com/conaticus">conaticus</a></p>
-        <button id="clear-passwords-btn">Clear Passwords</button>
-        <h1>Passwords</h1>
+        <div style="text-align: center; font-size: 30px; font-weight: 700; line-height: 1.2; height: 80px;" class="gradient-text">
+            100% definitely secure password manager
+        </div>
+        <div style="display: flex; flex-direction: row; align-items: center;">
+            <img src="./assets/conaticus.png" alt="Profile Image" style="width: 30px; margin-right: 10px;">
+            <div style="font-size: 20px; font-weight: 600;"><a href="https://youtube.com/conaticus" target="_blank" style="color: white; text-decoration: none;">conaticus</a></div>
+        </div>
+        <div style="display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
+            <h1 style="color: white;">Passwords</h1>
+            <button type="button" id="clear-passwords-btn">Clear Passwords</button></div>
         <div id="passwords-div"></div>
 
-        <script src="./popup.js"></script>
+        <script src="./scripts/popup.js"></script>
     </body>
 </html>
